--- a/src/index.jade
+++ b/src/index.jade
@@ -1,7 +1,8 @@
 doctype html html(lang="en")
 html
   head
-    title CSSDevConf 2014 Parade!
+    title CSSDevConf 2014 Parade!!!!
+    link(rel='stylesheet', type='text/css', href='/css/style.min.css')
   body
     .stage
       include ../images/nola.min.svg
