Get LiveReload working

--- a/src/index.jade
+++ b/src/index.jade
@@ -1,8 +1,10 @@
 doctype html html(lang="en")
 html
   head
-    title CSSDevConf 2014 Parade!!!!
+    title CSSDevConf 2014 Parade
     link(rel='stylesheet', type='text/css', href='/css/style.min.css')
   body
     .stage
       include ../images/nola.min.svg
+
+    script(src='http://localhost:2084/livereload.js')
