Fix class names

--- a/src/styl/animations.styl
+++ b/src/styl/animations.styl
@@ -65,7 +65,7 @@
   0%
     fill $sky-blue
   50%
-    fill darken($sky-blue, 50%)
+    fill darken($sky-blue, 70%)
   100%
     fill $sky-blue
 
@@ -74,3 +74,7 @@
   animation-duration 10s
   animation-timing-function ease-in-out
   animation-iteration-count infinite
+
+// // House lights
+// @keyframes house-lights
+//   0%
