--- a/src/styl/svg.styl
+++ b/src/styl/svg.styl
@@ -2,3 +2,11 @@
   fill $bubble-blue
 .sky-blue
   fill $sky-blue
+.window
+  fill $sky-blue
+.peach
+  fill $peach
+.lemon
+  fill $lemon
+.orange
+  fill $orange
